--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 body{
-background:  linear-gradient(90deg, #3AAFB9 0%,#093A3E 50%, #001011 100%);
+background:  linear-gradient(90deg, #3AAFB9 0%,#13646b 50%, #013c40 100%);
  
 }
-.agencyBody {
+ .agencyBody {
   margin: 10;
   font-family: Arial, sans-serif;
   
 }
-/* .carousel-container {
+ .carousel-container {
   width: 1000px;
   margin-left: 485px;
   
-} */
-
+} 
+ 
 .agencyContainer {
   width: 2000px;
   margin: 0 auto;
@@ -70,13 +70,13 @@ background:  linear-gradient(90deg, #3AAFB9 0%,#093A3E 50%, #001011 100%);
 .map-container {
   margin-top: 20px;
   height: 400px;
-}
+} 
 
 
-/* .App {
+ .App {
   text-align: center;
-}
-
+} 
+ 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -110,4 +110,4 @@ background:  linear-gradient(90deg, #3AAFB9 0%,#093A3E 50%, #001011 100%);
   to {
     transform: rotate(360deg);
   }
-} */
+} 
